2005-12-30  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/preferences-dialog.c
	(prefs_tree_select_callback)
	(prefs_notebook_page_callback): clean up treeview/model code.

2005-12-30  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpgradienteditor.c (view_events): typo.

2005-12-29  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell.c (gimp_display_shell_new):
	commented out gravity setting. While it's nice with
	"resize-windows-on-zoom" it doesn't yield satisfying behaviour in
	most cases.

2005-12-29  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdockbook.c (gimp_dockbook_dockable_added): set
	the current notebook page to the dockable that was just added.

2005-12-29  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdialogfactory.c (gimp_dialog_factories_show_foreach):
	fiddle with the "focus-on-map" window hint to prevent the dialogs
	from grabbing the focus away from the image window. Fixes bug #167762
	for window managers supporting this hint.

	* app/display/gimpdisplayshell-callbacks.c: removed redundant call
	to gdk_window_focus() that wasn't having the desired effect anyway.

2005-12-29  Simon Budig  <simon@gimp.org>

	* tools/pdbgen/pdb/image.pdb: new function: 
	    image_add_vectors

	* tools/pdbgen/pdb/vectors.pdb: new functions: 
	    vectors_get_strokes
	    vectors_stroke_get_point_at_dist
	    vectors_stroke_close
	
	removed nonfunctional undo code (that does not belong here anyways)
	and fixed a bug in [...]_cubicto.

	* app/pdb/image_cmds.c
	* app/pdb/internal_procs.c
	* app/pdb/vectors_cmds.c
	* libgimp/gimpimage_pdb.[ch]
	* libgimp/gimpvectors_pdb.[ch]: regenerated.

2005-12-29  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdialogfactory.[ch]: split
	gimp_dialog_factories_toggle() into two functions. Turned the
	tri-state into a simple boolean state. Dialogs are now either
	shown or not, without treating the toolbox any special.

	* app/actions/dialogs-commands.c